--- a/wiki-v7/wiki-spoiler-v2.css
+++ b/wiki-v7/wiki-spoiler-v2.css
@@ -71,15 +71,16 @@
         transform: translateZ(0);
         -webkit-transform: translateZ(0);
         will-change: transform;
-        font-size: 16px;
-        width: 80%;
+        font-size: 32px;
+        text-size-adjust: none;
+        width: 98%;
     }
 
     .wiki_spoiler_details .spoilers{
         position: relative;
         cursor: pointer;
         margin-bottom: 25px;
-        font-size: 20px;
+        font-size: 32px;
     }
 
     .wiki_spoiler_details .curtain{
