--- a/wiki-v7/wiki-v4.css
+++ b/wiki-v7/wiki-v4.css
@@ -524,6 +524,7 @@
         display: none;
         box-shadow: inset 0 0 10px #161615;
         transition: max-height 0.2s ease-out;
+        text-size-adjust: none;
     }
 
     .wiki_details ul{
@@ -574,7 +575,7 @@
 
     .wiki_details .text{
         padding: 10px 20px;
-        font-size: 16px;
+        font-size: 32px;
         font-weight: 300;
     }
 
